// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jobs library does not ignore old jobs 1`] = `
Array [
  Object {
    "_id": "b7671bbf53e9687e27487b617a0202fd",
    "_rev": "3-0138e101246dfa67f80dfaa801ba4dc9",
    "account": "b7671bbf53e9687e27487b617a01ffff",
    "domain": "cozy.tools:8080",
    "folder_to_save": "b7671bbf53e9687e27487b617a003b6e",
    "konnector": "trainline",
    "message": Object {
      "account": "b7671bbf53e9687e27487b617a01ffff",
      "folder_to_save": "b7671bbf53e9687e27487b617a003b6e",
      "konnector": "trainline",
    },
    "options": Object {
      "max_exec_count": 1,
      "max_exec_time": 0,
      "timeout": 0,
    },
    "queued_at": "2017-10-04T15:59:59.737529564+02:00",
    "started_at": "2017-10-04T16:00:01.767102968+02:00",
    "state": "running",
    "worker": "konnector",
  },
  Object {
    "_id": "b7671bbf53e9687e27487b617a0224d7",
    "_rev": "3-fed0f44c3a6ccabfe2c3c7b9bef9a0be",
    "account": "b7671bbf53e9687e27487b617a02248c",
    "domain": "cozy.tools:8080",
    "folder_to_save": "b7671bbf53e9687e27487b617a003b6e",
    "konnector": "trainline",
    "message": Object {
      "account": "b7671bbf53e9687e27487b617a02248c",
      "folder_to_save": "b7671bbf53e9687e27487b617a003b6e",
      "konnector": "trainline",
    },
    "options": Object {
      "max_exec_count": 1,
      "max_exec_time": 0,
      "timeout": 0,
    },
    "queued_at": "2017-10-04T17:06:09.415785346+02:00",
    "started_at": "2017-10-04T17:06:09.444339433+02:00",
    "state": "done",
    "worker": "konnector",
  },
]
`;

exports[`jobs library ignores oldest jobs 1`] = `
Array [
  Object {
    "_id": "b7671bbf53e9687e27487b617a0224d7",
    "_rev": "3-fed0f44c3a6ccabfe2c3c7b9bef9a0be",
    "account": "b7671bbf53e9687e27487b617a02248c",
    "domain": "cozy.tools:8080",
    "folder_to_save": "b7671bbf53e9687e27487b617a003b6e",
    "konnector": "trainline",
    "message": Object {
      "account": "b7671bbf53e9687e27487b617a02248c",
      "folder_to_save": "b7671bbf53e9687e27487b617a003b6e",
      "konnector": "trainline",
    },
    "options": Object {
      "max_exec_count": 1,
      "max_exec_time": 0,
      "timeout": 0,
    },
    "queued_at": "2017-10-04T17:06:09.415785346+02:00",
    "started_at": "2017-10-04T17:06:09.444339433+02:00",
    "state": "done",
    "worker": "konnector",
  },
]
`;
